--- a/src/style.css
+++ b/src/style.css
@@ -97,8 +97,68 @@ main p {
   grid-template-columns: 1fr 2fr 2fr;
 }
 
+.grid-3-columns {
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
 .img-responsive {
   max-width: 100%;
+  display: block;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.card {
+  background-color: white;
+  margin: 30px 0;
+}
+
+.card-body {
+  padding: 23px;
+}
+
+.card h4 {
+  margin: 0;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 1;
+  color: #000d13;
+}
+
+.card p {
+  font-size: 13px;
+}
+
+.card h5 {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1;
+  color: #000d13;
+  margin: 0;
+}
+
+.card-footer {
+  padding: 0 30px 30px;
+}
+
+.card-img {
+  max-width: 160px;
+}
+
+.btn {
+  display: block;
+  color: white;
+  background-color: #272044;
+  font-size: 14px;
+  line-height: 1.5;
+  font-weight: 700;
+  text-align: center;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  padding: 16px;
+  text-decoration: none;
 }
 
 footer {
@@ -116,9 +176,13 @@ footer h3 {
 }
 
 section {
-  max-width: 1200px;
+  max-width: 100%;
   margin: 0 auto;
-  padding: 100px 0;
+  padding: 100px;
+}
+
+section.secondary {
+  background-color: #f8f8f8;
 }
 
 footer p {
